# ai_hedge_fund

./: .env.example  .gitignore  CLAUDE.md  CONCLUSIONS.md  SUGGESTIONS.md  pyproject.toml  requirements.txt
dashboard/: .env.example  package-lock.json  package.json
data/: universe_nifty50.csv  v1_all_strategies_equity.csv  v1_compare_equity.csv  v1_equity.csv  v1_pillars_equity.csv
db/: schema.sql
extracted/: Aggregate_Signal.md  Buy_Signal_Analyser.md  Buy_Signal_Analyser_15Yr.md  Buy_Signal_Analyser_50DMA.md  Buy_Signal_v1.md  Buy_Signal_v2.md  Buy_Signal_v3.md  Drawdown_Analyser_a.md  Drawdown_Analyser_b.md  Drawdown_Analyser_c.md  Drawdown_Signal.md  EMA_Crossover_Analyser.md  EMA_Signal.md  EMA_Signal_Analyser.md  Stock_Correlation_Analyser.md  Zone_Signal.md  Zone_Signal_Analyser.md  _aapl_sheet_data.csv  _findings_BuySignal.md  _findings_Drawdown.md  _findings_EMA.md  _findings_FormulaAudit.md  _findings_Synthesis.md  _findings_Zone.md  _nifty50_cross_section.csv  _unwrap.ps1  audit_signal_formulas.py  audit_strategy1.py  compute_correct_xirr.py  compute_xirr_multi_stock.py  compute_xirr_universe.py  extract_formulas.py  reconcile_strategy1.py
scanner/: buyback.py  calibrate.py  catalog.py  db.py  deals.py  eventstudy.py  fundamentals.py  prices.py  run.py  scan.py  scan_deals.py  signals.py  track.py  universe.py
scripts/: backfill_deals.py  emit_signals_json.py  run_v1.py  run_v1_all_strategies.py  run_v1_compare.py  run_v1_pillars.py  seed_buybacks.py  validate_buyback_arb.py  validate_deals_edge.py  validate_merger_arb.py
tests/: test_backtest.py  (+10 more)
(+18 files in other folders)
