[project]
name = "ai_hedge_fund"
version = "0.1.0"
description = "AI Hedge Fund - portfolio backtester for Vilas's signal strategies"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.40",
    "pyxirr>=0.10",
    "openpyxl>=3.1",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-xdist>=3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
